--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -134,11 +134,11 @@
           <div class='item-img-content'>
             <%= image_tag item.image, class: "item-img" %>
 
-  
-            <div class='sold-out'>
-              <span>Sold Out!!</span>
-            </div>
-            
+            <% if item.sold_out? %>
+              <div class='sold-out'>
+                <span>Sold Out!!</span>
+              </div>
+            <% end %>
 
           </div>
           <div class='item-info'>
