クレジットカードの設定、バリテーションの設定、ログイン状態や購入済みかどうかでページ遷移させる

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -30,7 +30,7 @@
 
     <% elsif user_signed_in? %>
       <% unless @item.sold_out? %>
-        <%= link_to "購入画面に進む", purchasers_path(item_id: @item.id) ,class:"item-red-btn"%>
+        <%= link_to "購入画面に進む", purchasers_path(item_id: @item.id), data: { turbo: false }, class:"item-red-btn"%>
       <% end %>
     <% end %>
     <div class="item-explain-box">
